src/objects/SystemLog__c.object
<CustomObject>
    <description>An object to capture system logs.</description>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionalArea__c</fullName>
        <description>An optional field to mark the functional area</description>
        <label>Functional Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogLevel__c</fullName>
        <description>Used to store the log level</description>
        <label>Log Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warn</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoggedDateTime__c</fullName>
        <description>A field to store the exact date time at the which the log is recorded. Please note that this can be different than the log creation date(standard field).</description>
        <label>Logged Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Optional field to store some dev specific message provided by dev himself.</description>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <description>The field to store the session Id in which the log is generated.</description>
        <label>Session Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceClassName__c</fullName>
        <description>Class from which the log is generated.</description>
        <label>Source Class Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceMethodName__c</fullName>
        <description>The method from which the log oiriginates</description>
        <label>Source Method Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>System Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{0000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>